--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -10,17 +10,15 @@
     <aside class="sidebar">
         <div class="widget">
             <form action="" class="formulario">
-                <div>
-                    <label for="">Usuario</label>
-                    <input type="text" id="usuario"/>
+                <div class="form-group">
+                    <label for="usuario">Usuario</label>
+                    <input type="text" id="usuario" name="usuario" required>
                 </div>
-                <div>
-                    <label for="">Contraseña</label>
-                    <input type="password" id="password"/>
+                <div class="form-group">
+                    <label for="password">Contraseña</label>
+                    <input type="password" id="password" name="password" required>
                 </div>
-                <div>
-                    <button> Login </button>
-                </div>
+                <button type="submit" class="btn" id="enviar">Ingresar</button>
             </form>
             <button id="denuncias">Denuncias</button>
         </div>
