--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -1,5 +1,6 @@
 <main class="main-content">
     <div id="contenedor-articulos" class="content">
+        <app-article *ngFor="let post of posts" [articulo]="post" ></app-article>
         <article>
             <img src="https://www.trabajo.gob.hn/wp-content/uploads/2024/01/WhatsApp-Image-2024-01-31-at-9.44.59-AM-1080x675.jpeg" alt="Imagen de la gaceta">
             <h2>Es oficial: SIHCAL ya fue publicado en La Gaceta</h2>
@@ -9,16 +10,16 @@
     </div>
     <aside class="sidebar">
         <div class="widget">
-            <form action="" class="formulario">
+            <form class="formulario" [formGroup]="loginForm">
                 <div class="form-group">
                     <label for="usuario">Usuario</label>
-                    <input type="text" id="usuario" name="usuario" required>
+                    <input formControlName="email" type="text" id="usuario" name="usuario" required>
                 </div>
                 <div class="form-group">
                     <label for="password">Contraseña</label>
-                    <input type="password" id="password" name="password" required>
+                    <input formControlName="password" type="password" id="password" name="password" required>
                 </div>
-                <button type="submit" class="btn" id="enviar">Ingresar</button>
+                <button class="btn" (click)="login()" id="enviar">Ingresar</button>
             </form>
             <button id="denuncias">Denuncias</button>
         </div>
