--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -1,3 +1,4 @@
+<!-- PROYECTO FINAL ROY PORTILLO -->
 <main class="main-content">
     <div id="contenedor-articulos" class="content">
         <app-article *ngFor="let post of posts" [articulo]="post" ></app-article>
