Creacion de elementos del menú de navegación, se agregaron el resto de articulos en la pagina de inicio, configuraciones en elementos de estilos

--- a/src/app/components/article/article.component.html
+++ b/src/app/components/article/article.component.html
@@ -1,6 +1,27 @@
-<article>
+
     <img src="https://www.trabajo.gob.hn/wp-content/uploads/2024/01/WhatsApp-Image-2024-01-31-at-9.44.59-AM-1080x675.jpeg" alt="Imagen de la gaceta">
-    <h2> {{ articulo.title }} </h2>
+    <h2> Es oficial: SIHCAL ya fue publicado en La Gaceta </h2>
     <p>Feb 1, 2024 | Noticias</p>
-    <p>{{ articulo.body }}</p>
-</article>
+    <p>Todas las empresas tienen seis (6) meses a partir de dicha publicación para inscribirse al Sistema Hondureño de Casos Laborales y Registro Nacional Simplificado de Patronos, SRNSP. La agilización y automatización del acceso a información es vital para la protección de...</p>
+
+    <img src="https://www.trabajo.gob.hn/wp-content/uploads/2023/02/SalarioMinimoEvento-6-1-1080x675.jpeg" alt="Imagen Ministra">
+    <h2> ¡Muchos éxitos Ministra Sarahí Cerna! </h2>
+    <p>Jun 30, 2024 | Noticias</p>
+    <p>Seria, enfocada y altamente responsable de la investidura confiada a su persona por la primera mujer presidenta de Honduras, Xiomara Castro Sarmiento. Así se describe la fructífera gestión de la Abogada y Dra. Lesly Sarahí Cerna durante su paso por la Secretaría de...</p>
+
+    <img src="https://www.trabajo.gob.hn/wp-content/uploads/2024/06/GettyImages-89266986.jpg" alt="Imagen Xiomara">
+    <h2> 15 años en Resistencia. Golpes de Estado nunca más </h2>
+    <p>Jun 28, 2024 | Noticias</p>
+    <p>Han sido quince años fuertes desde aquella madrugada de domingo, cuando en 2009 un contingente militar se abrió paso a tiros en la residencia del Presidente José Manuel «Mel» Zelaya Rosales y lo removió del poder por la fuerza de las armas. Fue un ejercicio brutal de...</p>
+
+    <img src="https://www.trabajo.gob.hn/wp-content/uploads/2024/06/ILC-room-Palais-des-Nations-1000x667-1.jpg" alt="Imagen de la Conferencia">
+    <h2> Culmina la Conferencia Internacional del Trabajo en Suiza </h2>
+    <p>Jun 24, 2024 | Noticias</p>
+    <p>Un éxito para Honduras resultó la 112 Conferencia Internacional del Trabajo, celebrada este mes en la sede de la Organización Internacional del Trabajo en Ginebra, Suiza. La Secretaria de Estado en los Despachos de Trabajo y Seguridad Social, Dra. Sarahí Cerna...</p>
+
+    <img src="https://www.trabajo.gob.hn/wp-content/uploads/2024/06/WhatsApp-Image-2024-06-18-at-2.34.08-PM-1080x675.jpeg" alt="Imagen de Si Empleo">
+    <h2> Servicio Integral de Empleo en Acción </h2>
+    <p>Jun 19, 2024 | Noticias</p>
+    <p>El Servicio Integral de Empleo (Sí Empleo) es el servicio que presta la SETRASS para atender a ciudadanos en toda Honduras, en la delicada tarea de conseguir un empleo apropiado. Esta semana, se están celebrando Jornadas de Empleabilidad, Capacitación y...</p>
+
+    
