--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,7 +1,13 @@
-.footer{
+footer{
     background-color: #cf2e2e;
-    color: white;
+    color: rgb(252, 249, 249);
     text-align: center;
     padding: 1rem;
+
 }
 
+p {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    line-height: 1.6;
+    
+}
