--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,7 +4,10 @@
     </div>
     <nav class="nav">
         <ul>
-            <li *ngFor="let item of urls" ><a href="#">{{ item }}</a></li>
+            <li class="nav-item"><a class="nav-link" routerLink="inicio">Inicio</a></li>
+            <li class="nav-item"><a class="nav-link" routerLink="transparencia">Transparencia</a></li>
+            <li class="nav-item"><a class="nav-link" routerLink="cafta">Cafta</a></li>
+            <li class="nav-item"><a class="nav-link" routerLink="contacto">Contacto</a></li>
         </ul>
     </nav>
 </header>
