--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <aside class="sidebar">
-    <div class="widwet">
+    <div class="widget">
         <form action="" class="formulario">
             <div class="form-group">
                 <label for="usuario">Usuario</label>
