--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -10,7 +10,7 @@
  .sidebar button{
     width: 100%;
     padding: 1rem;
-    background-color: aqua;
+    background-color:#59D0E1;
     border: none;
     cursor: pointer;
     color: white;
@@ -53,7 +53,7 @@
 .btn {
    width: 100%;
    padding: 10px;
-   background-color: #007bff;
+   background-color:#59D0E1;
    border: none;
    border-radius: 4px;
    color: white;
@@ -62,7 +62,6 @@
 }
 
 .btn:hover {
-   background-color: #0056b3;
+   background-color: #59D0E1;
 }
 
- 
