--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -1,15 +1,10 @@
 <!-- PROYECTO FINAL ROY PORTILLO -->
 <main class="main-content">
     <div id="contenedor-articulos" class="content">
-        <app-article *ngFor="let post of posts" [articulo]="post" ></app-article>
-        <article>
-            <img src="https://www.trabajo.gob.hn/wp-content/uploads/2024/01/WhatsApp-Image-2024-01-31-at-9.44.59-AM-1080x675.jpeg" alt="Imagen de la gaceta">
-            <h2>Es oficial: SIHCAL ya fue publicado en La Gaceta</h2>
-            <p>Feb 1, 2024 | Noticias</p>
-            <p>Todas las empresas tienen seis (6) meses a partir de dicha publicación para inscribirse...</p>
-        </article>
+        <app-article></app-article>
     </div>
-    <aside class="sidebar">
+    <app-sidebar></app-sidebar>
+    <!-- <aside class="sidebar">
         <div class="widget">
             <form class="formulario" [formGroup]="loginForm">
                 <div class="form-group">
@@ -27,8 +22,8 @@
         <div class="widget">
             <button id="sihcal">SIHCAL</button>
         </div>
-        <!-- <div class="widget">
+        <div class="widget">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/5hPLCK0m8Pg?si=fbAHnpawzq_bKMSR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div> -->
-    </aside>
+    <!-- </aside> -->
 </main>
