--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,7 +4,7 @@
     </div>
     <nav class="nav">
         <ul>
-            <li class="nav-item"><a class="nav-link" routerLink="inicio">Inicio</a></li>
+            <li class="nav-item"><a class="nav-link" routerLink="index">Inicio</a></li>
             <li class="nav-item"><a class="nav-link" routerLink="transparencia">Transparencia</a></li>
             <li class="nav-item"><a class="nav-link" routerLink="cafta">Cafta</a></li>
             <li class="nav-item"><a class="nav-link" routerLink="contacto">Contacto</a></li>
