Se creó la ruta por defecto del sitio al momento de ingresar en el app routing, se centró el contenido de la página de inicio

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,9 +1,13 @@
 footer{
-    background-color: #cf2e2e;
-    color: rgb(252, 249, 249);
+    background-color: #db473c;
+    color: white;
     text-align: center;
     padding: 1rem;
-
+    width: 100%;
+    position: relative; 
+    bottom: 0;
+    box-sizing: border-box;
+ 
 }
 
 p {
