--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,8 +2,8 @@
     <div class="logo">
         <img src="https://www.trabajo.gob.hn/wp-content/uploads/2023/11/cropped-cropped-314512310_489364863225936_2015983967601765690_n.png" alt="">
     </div>
-    <nav class="nav">
-        <ul>
+    <nav id="principal-menu" class="nav">
+        <ul class="menu" [class.is-open]="isMenuOpen">
             <li class="nav-item"><a class="nav-link" routerLink="index">Inicio</a></li>
             <li class="nav-item"><a class="nav-link" routerLink="transparencia">Transparencia</a></li>
             <li class="nav-item"><a class="nav-link" routerLink="cafta">Cafta</a></li>
