--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -15,7 +15,7 @@
         <div class="denuncias">
         
             <img src="./images/dhjkf.jpeg" alt="">
-            <button type="submit" class="btn">Tarea de Otoniel</button>
+            <button type="submit" class="btn">SIHCAL</button>
         </div>
         <!-- <button type="submit" class="btn">Denuncia</button> -->
     </div>
