--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -1,4 +1,5 @@
 .sidebar{
+   font-family: Verdana, Geneva, Tahoma, sans-serif;
     flex: 1;
     padding: 1rem;
     background-color: white;
@@ -15,13 +16,6 @@
     cursor: pointer;
     color: white;
     font-weight: bold;
- }
- .footer{
-    background-color: #cf2e2e;
-    color: white;
-    text-align: center;
-    padding: 1rem;
-    
  }
 
  .formulario {
