Se corrigió estilo de Footer, se cambió fuente de los items del menú, se agregó el Sidebar en los componentes cafta, transparencia, contacto

--- a/src/app/pages/cafta/cafta.component.html
+++ b/src/app/pages/cafta/cafta.component.html
@@ -1,1 +1,10 @@
-<p>cafta works!</p>
+<body>
+    <main class="col-xl-4 col-sm-12 main-content">
+    <div id="contenedor-articulos" class="content">
+        ESTO ES CAFTA
+    </div>
+    <div id="contenedor-sidebar">
+        <app-sidebar></app-sidebar>
+    </div>
+</main>
+</body>
