--- a/src/app/pages/transparencia/transparencia.component.html
+++ b/src/app/pages/transparencia/transparencia.component.html
@@ -1,1 +1,10 @@
-<p>transparencia works!</p>
+<body>
+    <main class="col-xl-4 col-sm-12 main-content">
+    <div id="contenedor-articulos" class="content">
+        ESTO ES TRANSPARENCIA
+    </div>
+    <div id="contenedor-sidebar">
+        <app-sidebar></app-sidebar>
+    </div>
+</main>
+</body>
