Se agregaron los componentes para Transparencia y CAFTA, a su vez se les configuró los estilos y se les agregó contenido a sus respectivas pages.

--- a/src/app/pages/cafta/cafta.component.html
+++ b/src/app/pages/cafta/cafta.component.html
@@ -1,7 +1,7 @@
 <body>
     <main class="col-xl-4 col-sm-12 main-content">
-    <div id="contenedor-articulos" class="content">
-        ESTO ES CAFTA
+    <div id="contenedor-cafta" class="content">
+        <app-cafta-contenido></app-cafta-contenido>
     </div>
     <div id="contenedor-sidebar">
         <app-sidebar></app-sidebar>
