--- a/src/app/pages/transparencia/transparencia.component.html
+++ b/src/app/pages/transparencia/transparencia.component.html
@@ -1,7 +1,7 @@
 <body>
     <main class="col-xl-4 col-sm-12 main-content">
     <div id="contenedor-articulos" class="content">
-        ESTO ES TRANSPARENCIA
+        <app-transparencia-contenido></app-transparencia-contenido>
     </div>
     <div id="contenedor-sidebar">
         <app-sidebar></app-sidebar>
