Se agregaron las barras de título con sus respectivos estilos, en Cafta, transparencia y contacto

--- a/src/app/pages/cafta/cafta.component.html
+++ b/src/app/pages/cafta/cafta.component.html
@@ -1,10 +1,8 @@
+<div class="titulo-cafta">CAFTA</div>
 <body>
     <main class="col-xl-4 col-sm-12 main-content">
     <div id="contenedor-cafta" class="content">
         <app-cafta-contenido></app-cafta-contenido>
-    </div>
-    <div id="contenedor-sidebar">
-        <app-sidebar></app-sidebar>
     </div>
 </main>
 </body>
