--- a/src/app/pages/contacto/contacto.component.html
+++ b/src/app/pages/contacto/contacto.component.html
@@ -1,3 +1,4 @@
+<div class="titulo-contacto">Contacto</div>
 <body>
     <main class="col-xl-4 col-sm-12 main-content">
     <div id="contenedor-articulos" class="content">
