--- a/src/app/pages/transparencia/transparencia.component.html
+++ b/src/app/pages/transparencia/transparencia.component.html
@@ -1,10 +1,8 @@
+<div class="titulo-transparencia">Transparencia</div>
 <body>
     <main class="col-xl-4 col-sm-12 main-content">
     <div id="contenedor-articulos" class="content">
         <app-transparencia-contenido></app-transparencia-contenido>
-    </div>
-    <div id="contenedor-sidebar">
-        <app-sidebar></app-sidebar>
     </div>
 </main>
 </body>
