--- a/src/app/pages/cafta/cafta.component.scss
+++ b/src/app/pages/cafta/cafta.component.scss
@@ -33,3 +33,15 @@ body {
         flex-direction: row;
     }
 }
+
+.titulo-cafta{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: #969499;
+    color: white;
+    font-weight: bold;
+    padding: 1rem;
+    width: 100%;
+    position: relative; 
+    bottom: 0;
+    box-sizing: border-box;
+}
