Se agregó Formulario, y se configuró api para usar Firestore de Firebase para guardar datos de formulario de  contacto.

--- a/src/app/pages/contacto/contacto.component.html
+++ b/src/app/pages/contacto/contacto.component.html
@@ -3,8 +3,8 @@
 <div class="titulo-contacto">Contacto</div>
 <body>
     <main class="col-xl-4 col-sm-12 main-content">
-    <div id="contenedor-articulos" class="content">
-        ESTO ES CONTACTO
+    <div id="contenedor-form" class="content">
+        <app-new-fmdatos></app-new-fmdatos>
     </div>
     <div id="contenedor-sidebar">
         <app-sidebar></app-sidebar>
