Se está trabajando para que me hale todos los datos que estoy registrando en la base de datos, componente fmdatos-list

--- a/src/app/pages/contacto/contacto.component.html
+++ b/src/app/pages/contacto/contacto.component.html
@@ -5,6 +5,9 @@
     <main class="col-xl-4 col-sm-12 main-content">
     <div id="contenedor-form" class="content">
         <app-new-fmdatos></app-new-fmdatos>
+        <br>
+        <br>
+        <app-fmdatos-list></app-fmdatos-list>
     </div>
     <div id="contenedor-sidebar">
         <app-sidebar></app-sidebar>
