--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -14,13 +14,11 @@
 
         <div class="denuncias">
         
-            <img src="./images/dhjkf.jpeg" alt="">
+            <img src="" alt="">
             <button type="submit" class="btn">SIHCAL</button>
         </div>
-        <!-- <button type="submit" class="btn">Denuncia</button> -->
+        
     </div>
     
-    <!--  <div class="widwet">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/grplVttindo?si=gm66eE2hxYnrAlEW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </div> -->
+    
 </aside>
