--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,23 +1,53 @@
 <aside class="sidebar">
     <div class="widget">
-        <form action="" class="formulario">
-            <div class="form-group">
-                <label for="usuario">Usuario</label>
-                <input type="text" id="usuario" name="usuario" required>
-            </div>
-            <div class="form-group">
-                <label for="password">Contraseña</label>
-                <input type="password" id="password" name="password" required>
-            </div>
-            <button type="submit" class="btn" id="enviar">Ingresar</button>
-        </form>
-
-        <div class="denuncias">
+        <div action="" class="elementos">
+            <div class="Botones">
         
-            <img src="" alt="">
-            <button type="submit" class="btn">SIHCAL</button>
+                <img src="https://www.trabajo.gob.hn/wp-content/uploads/2023/11/sihcalogo.png" alt="">
+                <button type="submit" class="btn">SIHCAL</button>
+                <br>
+                <br>
+                <img src="" alt="">
+                <button type="submit" class="btn">DENUNCIAS</button>
+                <br>
+                <br>
+                <img src="" alt="">
+                <button type="submit" class="btn">Sentencia LEMOTH MORRIS<h6>CASO DE LOS BUZOS MISKITOS (LEMOTH MORRIS Y OTROS) VS. HONDURAS</h6></button>
+            </div>
+            <br>
+                <br>
+            <div class="desktop_menu">
+                <ul>
+                    <li ><a class="nav-link" >Programa de Trabajo Temporal en el Extranjero</a></li>
+                    <li ><a class="nav-link" >Acceso a Plataforma SIELHO</a></li>
+                    <li ><a class="nav-link" >COCOIN</a></li>
+                    <li ><a class="nav-link" >ONADICI</a></li>
+                    <li ><a class="nav-link" >Sistema de Archivo de Reglamentos Internos de Trabajo</a></li>
+                    <li ><a class="nav-link" >Código de Trabajo</a></li>
+                    <li ><a class="nav-link" >Sistema de Registro de Contratos Colectivos</a></li>
+                    <li ><a class="nav-link" >Tabla de Salario Mínimo y Tabla del Bono Educativo</a></li>
+                    <li ><a class="nav-link" >Cálculo de Prestaciones</a></li>
+                    <li ><a class="nav-link" >Comité de Ética</a></li>
+                    <li ><a class="nav-link" >Ley de Inspección de Trabajo</a></li>
+                    <li ><a class="nav-link" >Informe Anual de Mercado de Trabajo y Salarios</a></li>
+                    <li ><a class="nav-link" >EMPLÉATE</a></li>
+                    <li ><a class="nav-link" >Empléate plus</a></li>
+                    <li ><a class="nav-link" >Plataforma Virtual de Capacitación</a></li>
+                    <li ><a class="nav-link" >Cursos de Inducción de Agencias de Empleo Privadas</a></li>
+                    <li ><a class="nav-link" >Suspensiones y Oposiciones</a></li>
+                    <li ><a class="nav-link" >empresas Acogidas al Decreto 33-2020</a></li>
+                    <li ><a class="nav-link" >Protocolos de Bioseguridad Sector No Formal</a></li>
+                    <li ><a class="nav-link" >Protocolos de Bioseguridad</a></li>
+                </ul>
+            </div>   
         </div>
-        
+
+       
+
+
+		
+
+
     </div>
     
     
