Se agregaron comentarios a los métodos utilizados en el código fuente

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<!-- Aca defino el contenido de mi sitio, todo será manejado por componentes -->
 <app-header></app-header>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
