--- a/src/app/components/new-fmdatos/new-fmdatos.component.html
+++ b/src/app/components/new-fmdatos/new-fmdatos.component.html
@@ -1,3 +1,4 @@
+<!-- El evento (ngSubmit) se activa cuando el usuario envía el formulario y llama al método onSubmit() -->
 <form [formGroup]="formulario" (ngSubmit)="onSubmit()">
     <div class="mb-3">
         <label class="form-label">Nombre:</label>
