--- a/src/app/pages/cafta/cafta.component.html
+++ b/src/app/pages/cafta/cafta.component.html
@@ -4,6 +4,7 @@
 <body>
     <main class="col-xl-4 col-sm-12 main-content">
     <div id="contenedor-cafta" class="content">
+        <!-- llamo al componente que maneja el contenido de CAFTA -->
         <app-cafta-contenido></app-cafta-contenido>
     </div>
 </main>
