--- a/src/app/pages/contacto/contacto.component.html
+++ b/src/app/pages/contacto/contacto.component.html
@@ -4,12 +4,15 @@
 <body>
     <main class="col-xl-4 col-sm-12 main-content">
     <div id="contenedor-form" class="content">
+        <!-- Hago el llamado de componente que tiene el formulario de contacto -->
         <app-new-fmdatos></app-new-fmdatos>
         <br>
         <br>
+        <!-- llamo al componente que me enlista los datos que ingreso y almaceno desde el formulario de contacto -->
         <app-fmdatos-list></app-fmdatos-list>
     </div>
     <div id="contenedor-sidebar">
+        <!-- llamo al componente que contiene la barra lateral o sidebar -->
         <app-sidebar></app-sidebar>
     </div>
 </main>
