--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -2,9 +2,11 @@
 <body>
     <main class="col-xl-4 col-sm-12 main-content">
     <div id="contenedor-articulos" class="content">
+        <!-- llamo al componente article html -->
         <app-article></app-article>
     </div>
     <div id="contenedor-sidebar">
+        <!-- llamo el componente de la barra lateral o sidebar -->
         <app-sidebar></app-sidebar>
     </div>
 </main>
