--- a/src/app/components/transparencia-contenido/transparencia-contenido.component.html
+++ b/src/app/components/transparencia-contenido/transparencia-contenido.component.html
@@ -7,7 +7,8 @@
  <br>
  <br>
  <div>
-    <iframe id="advanced_iframe"  name="advanced_iframe"  src="https://portalunico.iaip.gob.hn/portal=419"  width="100%"  height="800"  frameborder="0"  allowtransparency="true"  loading="lazy"  style=";width:100%;height:800px;" ></iframe>
+   <!-- Se utiliza un iframe llamar el contenido del sitio web de Transparencia. -->
+    <iframe id="advanced_iframe"  name="advanced_iframe"  src="https://portalunico.iaip.gob.hn/portal=419"  width="100%"  height="800"  frameborder="0"  allowtransparency="true"  loading="lazy"  ></iframe>
  </div>
  
     </article>
