--- a/src/app/pages/transparencia/transparencia.component.html
+++ b/src/app/pages/transparencia/transparencia.component.html
@@ -4,7 +4,8 @@
 <body>
     <main class="col-xl-4 col-sm-12 main-content">
     <div id="contenedor-articulos" class="content">
-        <app-transparencia-contenido></app-transparencia-contenido>
+        <!-- llama al contenido del componente transparencia-contenido.html -->
+        <app-transparencia-contenido></app-transparencia-contenido> 
     </div>
 </main>
 </body>
